sw_dataplane/rp4-new/yacc.output
Terminals unused in grammar

   T_EOF
   VALUE_STRING


Grammar

    0 $accept: start $end

    1 start: header_defs struct_defs parser_def actions_def tables_def pipeline pipeline
    2      | header_del adds rebuilds

    3 header_del: header_defs struct_defs parser_def dels

    4 dels: %empty
    5     | dels del

    6 del: DEL STAGE IDENTIFIER
    7    | DEL TABLE IDENTIFIER IN STAGE IDENTIFIER
    8    | DEL ACTION IDENTIFIER IN STAGE IDENTIFIER
    9    | DEL ENTRIES IN TABLE IDENTIFIER IN STAGE IDENTIFIER
   10    | DEL PARSER IDENTIFIER IN STAGE IDENTIFIER
   11    | DEL MATCHER IN STAGE IDENTIFIER key_def

   12 rebuilds: %empty
   13         | rebuilds rebuild

   14 rebuild: REBUILD DEFAULT_ACTION IDENTIFIER IN TABLE IDENTIFIER IN STAGE IDENTIFIER
   15        | REBUILD EXPRESSION IN ACTION IDENTIFIER IN STAGE IDENTIFIER expressions
   16        | REBUILD OPERATION IN STAGE IDENTIFIER operations
   17        | REBUILD ACTION_TO_STAGE IDENTIFIER IN STAGE IDENTIFIER NEXT_STAGE IDENTIFIER

   18 adds: %empty
   19     | adds add

   20 add: ADD STAGE stage_def
   21    | ADD TABLE table_def
   22    | ADD ACTION action_def
   23    | ADD ENTRIES IN TABLE IDENTIFIER IN STAGE IDENTIFIER table_optional_stmt
   24    | ADD PARSER IDENTIFIER IN STAGE IDENTIFIER
   25    | ADD MATCHER IN STAGE IDENTIFIER switch_entries
   26    | ADD EXECUTOR IN STAGE IDENTIFIER stage_executor_entries

   27 header_defs: %empty
   28            | header_defs header_def

   29 header_def: HEADER IDENTIFIER '{' field_defs '}'

   30 field_defs: %empty
   31           | field_defs field_def ';'

   32 field_def: type_def IDENTIFIER

   33 type_def: BIT '<' VALUE_INT '>'
   34         | IDENTIFIER

   35 struct_defs: %empty
   36            | struct_defs struct_def

   37 struct_def: STRUCT IDENTIFIER '{' field_defs '}' IDENTIFIER ';'
   38           | STRUCT HEADERS '{' field_defs '}' IDENTIFIER ';'

   39 parser_def: %empty
   40           | PARSER IDENTIFIER '(' PACKET_IN PACKET ')' '{' state_defs '}'

   41 state_defs: %empty
   42           | state_defs state_def

   43 state_def: STATE IDENTIFIER '{' extract_stmt transition_stmt '}'

   44 extract_stmt: PACKET '.' EXTRACT '(' member ')' ';'

   45 member: IDENTIFIER '.' IDENTIFIER

   46 transition_stmt: TRANSITION SELECT '(' fields ')' '{' transition_entries '}'
   47                | TRANSITION direct_entry ';'

   48 fields: %empty
   49       | field
   50       | fields ',' field

   51 direct_entry: IDENTIFIER
   52             | ACCEPT

   53 field: IDENTIFIER '.' IDENTIFIER '.' IDENTIFIER
   54      | IDENTIFIER '.' IDENTIFIER '.' IS_VALID '(' ')'

   55 transition_entries: %empty
   56                   | transition_entries transition_entry

   57 transition_entry: key_def ':' IDENTIFIER ';'
   58                 | key_def ':' ACCEPT ';'

   59 key_def: VALUE_INT
   60        | TRUE
   61        | FALSE
   62        | VALUE_INT ANDANDAND VALUE_INT
   63        | VALUE_INT DIVDIVDIV VALUE_INT
   64        | DEFAULT
   65        | '*'

   66 actions_def: ACTIONS '{' action_defs '}'

   67 action_defs: %empty
   68            | action_defs action_def

   69 action_def: ACTION IDENTIFIER '(' parameters ')' '{' expressions '}'
   70           | ACTION NOACTION '(' ')' '{' '}'

   71 parameters: %empty
   72           | field_def
   73           | parameters ',' field_def

   74 expressions: %empty
   75            | expressions expression

   76 expression: lvalue '=' operation ';'

   77 lvalue: member
   78       | field

   79 operation: operand
   80          | '(' operation op operation ')'

   81 op: '+'
   82   | '-'
   83   | '*'
   84   | '/'
   85   | '&'
   86   | '|'
   87   | '^'
   88   | '~'
   89   | '!'
   90   | EQU
   91   | NEQ
   92   | '<'
   93   | '>'
   94   | LEQ
   95   | GEQ

   96 operand: lvalue
   97        | VALUE_INT
   98        | IDENTIFIER
   99        | TRUE
  100        | FALSE

  101 tables_def: TABLES '{' table_defs '}'

  102 table_defs: %empty
  103           | table_defs table_def

  104 table_def: TABLE IDENTIFIER '{' table_key_def table_optional_stmts '}'

  105 table_key_def: KEY '=' '{' key_entries '}'

  106 key_entries: %empty
  107            | key_entries key_entry

  108 key_entry: lvalue ':' match_type ';'

  109 match_type: EXACT
  110           | TERNARY
  111           | LPM

  112 table_optional_stmts: %empty
  113                     | table_optional_stmts table_optional_stmt

  114 table_optional_stmt: SIZE '=' VALUE_INT ';'
  115                    | ENTRIES '=' '{' match_entries '}'
  116                    | DEFAULT_ACTION '=' IDENTIFIER ';'
  117                    | DEFAULT_ACTION '=' NOACTION ';'
  118                    | VALUE_WIDTH '=' VALUE_INT ';'

  119 match_entries: %empty
  120              | match_entries match_entry

  121 match_entry: match_key ':' IDENTIFIER ';'
  122            | match_key ':' NOACTION ';'

  123 match_key: '(' key_defs ')'

  124 key_defs: %empty
  125         | key_def
  126         | key_defs ',' key_def

  127 pipeline: CONTROL IDENTIFIER '{' stage_defs '}'

  128 stage_defs: %empty
  129           | stage_defs stage_def

  130 stage_def: STAGE IDENTIFIER '{' stage_parser stage_matcher stage_executor '}'

  131 stage_parser: PARSER '{' stage_parser_headers '}' ';'

  132 stage_parser_headers: %empty
  133                     | stage_parser_headers stage_parser_header

  134 stage_parser_header: IDENTIFIER ';'

  135 stage_matcher: MATCHER '{' SWITCH '(' operations ')' '{' switch_entries '}' '}' ';'

  136 operations: %empty
  137           | operation
  138           | operations ',' operation

  139 switch_entries: %empty
  140               | switch_entries switch_entry

  141 switch_entry: key_def ':' switch_value ';'

  142 switch_value: TABLE '(' IDENTIFIER ')'
  143             | STAGE '(' IDENTIFIER ')'
  144             | ACTION '(' IDENTIFIER ')'
  145             | ACTION '(' NOACTION ')'
  146             | NONE

  147 stage_executor: EXECUTOR '{' stage_executor_entries '}' ';'

  148 stage_executor_entries: %empty
  149                       | stage_executor_entries stage_executor_entry

  150 stage_executor_entry: stage_executor_entry_left ':' stage_name ';'

  151 stage_executor_entry_left: IDENTIFIER
  152                          | HIT
  153                          | MISS
  154                          | NOACTION

  155 stage_name: IDENTIFIER
  156           | NONE


Terminals, with rules where they appear

$end (0) 0
'!' (33) 89
'&' (38) 85
'(' (40) 40 44 46 54 69 70 80 123 135 142 143 144 145
')' (41) 40 44 46 54 69 70 80 123 135 142 143 144 145
'*' (42) 65 83
'+' (43) 81
',' (44) 50 73 126 138
'-' (45) 82
'.' (46) 44 45 53 54
'/' (47) 84
':' (58) 57 58 108 121 122 141 150
';' (59) 31 37 38 44 47 57 58 76 108 114 116 117 118 121 122 131 134
    135 141 147 150
'<' (60) 33 92
'=' (61) 76 105 114 115 116 117 118
'>' (62) 33 93
'^' (94) 87
'{' (123) 29 37 38 40 43 46 66 69 70 101 104 105 115 127 130 131 135
    147
'|' (124) 86
'}' (125) 29 37 38 40 43 46 66 69 70 101 104 105 115 127 130 131 135
    147
'~' (126) 88
error (256)
BIT (258) 33
STRUCT (259) 37 38
TRUE (260) 60 99
FALSE (261) 61 100
HEADER (262) 29
HEADERS (263) 38
PARSER (264) 10 24 40 131
STATE (265) 43
TRANSITION (266) 46 47
PACKET (267) 40 44
PACKET_IN (268) 40
DEFAULT (269) 64
ACCEPT (270) 52 58
EXTRACT (271) 44
SELECT (272) 46
ACTIONS (273) 66
ACTION (274) 8 15 22 69 70 144 145
NOACTION (275) 70 117 122 145 154
TABLES (276) 101
TABLE (277) 7 9 14 21 23 104 142
KEY (278) 105
SIZE (279) 114
DEFAULT_ACTION (280) 14 116 117
ENTRIES (281) 9 23 115
EXACT (282) 109
TERNARY (283) 110
LPM (284) 111
STAGE (285) 6 7 8 9 10 11 14 15 16 17 20 23 24 25 26 130 143
CONTROL (286) 127
MATCHER (287) 11 25 135
EXECUTOR (288) 26 147
SWITCH (289) 135
HIT (290) 152
MISS (291) 153
NONE (292) 146 156
IS_VALID (293) 54
VALUE_WIDTH (294) 118
EQU (295) 90
NEQ (296) 91
LEQ (297) 94
GEQ (298) 95
T_EOF (299)
ANDANDAND (300) 62
DIVDIVDIV (301) 63
IDENTIFIER (302) 6 7 8 9 10 11 14 15 16 17 23 24 25 26 29 32 34 37
    38 40 43 45 51 53 54 57 69 98 104 116 121 127 130 134 142 143 144
    151 155
VALUE_STRING (303)
VALUE_INT (304) 33 59 62 63 97 114 118
ADD (305) 20 21 22 23 24 25 26
DEL (306) 6 7 8 9 10 11
REBUILD (307) 14 15 16 17
IN (308) 7 8 9 10 11 14 15 16 17 23 24 25 26
EXPRESSION (309) 15
OPERATION (310) 16
ACTION_TO_STAGE (311) 17
NEXT_STAGE (312) 17


Nonterminals, with rules where they appear

$accept (78)
    on left: 0
start (79)
    on left: 1 2, on right: 0
header_del (80)
    on left: 3, on right: 2
dels (81)
    on left: 4 5, on right: 3 5
del (82)
    on left: 6 7 8 9 10 11, on right: 5
rebuilds (83)
    on left: 12 13, on right: 2 13
rebuild (84)
    on left: 14 15 16 17, on right: 13
adds (85)
    on left: 18 19, on right: 2 19
add (86)
    on left: 20 21 22 23 24 25 26, on right: 19
header_defs (87)
    on left: 27 28, on right: 1 3 28
header_def (88)
    on left: 29, on right: 28
field_defs (89)
    on left: 30 31, on right: 29 31 37 38
field_def (90)
    on left: 32, on right: 31 72 73
type_def (91)
    on left: 33 34, on right: 32
struct_defs (92)
    on left: 35 36, on right: 1 3 36
struct_def (93)
    on left: 37 38, on right: 36
parser_def (94)
    on left: 39 40, on right: 1 3
state_defs (95)
    on left: 41 42, on right: 40 42
state_def (96)
    on left: 43, on right: 42
extract_stmt (97)
    on left: 44, on right: 43
member (98)
    on left: 45, on right: 44 77
transition_stmt (99)
    on left: 46 47, on right: 43
fields (100)
    on left: 48 49 50, on right: 46 50
direct_entry (101)
    on left: 51 52, on right: 47
field (102)
    on left: 53 54, on right: 49 50 78
transition_entries (103)
    on left: 55 56, on right: 46 56
transition_entry (104)
    on left: 57 58, on right: 56
key_def (105)
    on left: 59 60 61 62 63 64 65, on right: 11 57 58 125 126 141
actions_def (106)
    on left: 66, on right: 1
action_defs (107)
    on left: 67 68, on right: 66 68
action_def (108)
    on left: 69 70, on right: 22 68
parameters (109)
    on left: 71 72 73, on right: 69 73
expressions (110)
    on left: 74 75, on right: 15 69 75
expression (111)
    on left: 76, on right: 75
lvalue (112)
    on left: 77 78, on right: 76 96 108
operation (113)
    on left: 79 80, on right: 76 80 137 138
op (114)
    on left: 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95, on right:
    80
operand (115)
    on left: 96 97 98 99 100, on right: 79
tables_def (116)
    on left: 101, on right: 1
table_defs (117)
    on left: 102 103, on right: 101 103
table_def (118)
    on left: 104, on right: 21 103
table_key_def (119)
    on left: 105, on right: 104
key_entries (120)
    on left: 106 107, on right: 105 107
key_entry (121)
    on left: 108, on right: 107
match_type (122)
    on left: 109 110 111, on right: 108
table_optional_stmts (123)
    on left: 112 113, on right: 104 113
table_optional_stmt (124)
    on left: 114 115 116 117 118, on right: 23 113
match_entries (125)
    on left: 119 120, on right: 115 120
match_entry (126)
    on left: 121 122, on right: 120
match_key (127)
    on left: 123, on right: 121 122
key_defs (128)
    on left: 124 125 126, on right: 123 126
pipeline (129)
    on left: 127, on right: 1
stage_defs (130)
    on left: 128 129, on right: 127 129
stage_def (131)
    on left: 130, on right: 20 129
stage_parser (132)
    on left: 131, on right: 130
stage_parser_headers (133)
    on left: 132 133, on right: 131 133
stage_parser_header (134)
    on left: 134, on right: 133
stage_matcher (135)
    on left: 135, on right: 130
operations (136)
    on left: 136 137 138, on right: 16 135 138
switch_entries (137)
    on left: 139 140, on right: 25 135 140
switch_entry (138)
    on left: 141, on right: 140
switch_value (139)
    on left: 142 143 144 145 146, on right: 141
stage_executor (140)
    on left: 147, on right: 130
stage_executor_entries (141)
    on left: 148 149, on right: 26 147 149
stage_executor_entry (142)
    on left: 150, on right: 149
stage_executor_entry_left (143)
    on left: 151 152 153 154, on right: 150
stage_name (144)
    on left: 155 156, on right: 150


State 0

    0 $accept: . start $end

    $default  reduce using rule 27 (header_defs)

    start        go to state 1
    header_del   go to state 2
    header_defs  go to state 3


State 1

    0 $accept: start . $end

    $end  shift, and go to state 4


State 2

    2 start: header_del . adds rebuilds

    $default  reduce using rule 18 (adds)

    adds  go to state 5


State 3

    1 start: header_defs . struct_defs parser_def actions_def tables_def pipeline pipeline
    3 header_del: header_defs . struct_defs parser_def dels
   28 header_defs: header_defs . header_def

    HEADER  shift, and go to state 6

    $default  reduce using rule 35 (struct_defs)

    header_def   go to state 7
    struct_defs  go to state 8


State 4

    0 $accept: start $end .

    $default  accept


State 5

    2 start: header_del adds . rebuilds
   19 adds: adds . add

    ADD  shift, and go to state 9

    $default  reduce using rule 12 (rebuilds)

    rebuilds  go to state 10
    add       go to state 11


State 6

   29 header_def: HEADER . IDENTIFIER '{' field_defs '}'

    IDENTIFIER  shift, and go to state 12


State 7

   28 header_defs: header_defs header_def .

    $default  reduce using rule 28 (header_defs)


State 8

    1 start: header_defs struct_defs . parser_def actions_def tables_def pipeline pipeline
    3 header_del: header_defs struct_defs . parser_def dels
   36 struct_defs: struct_defs . struct_def

    STRUCT  shift, and go to state 13
    PARSER  shift, and go to state 14

    $default  reduce using rule 39 (parser_def)

    struct_def  go to state 15
    parser_def  go to state 16


State 9

   20 add: ADD . STAGE stage_def
   21    | ADD . TABLE table_def
   22    | ADD . ACTION action_def
   23    | ADD . ENTRIES IN TABLE IDENTIFIER IN STAGE IDENTIFIER table_optional_stmt
   24    | ADD . PARSER IDENTIFIER IN STAGE IDENTIFIER
   25    | ADD . MATCHER IN STAGE IDENTIFIER switch_entries
   26    | ADD . EXECUTOR IN STAGE IDENTIFIER stage_executor_entries

    PARSER    shift, and go to state 17
    ACTION    shift, and go to state 18
    TABLE     shift, and go to state 19
    ENTRIES   shift, and go to state 20
    STAGE     shift, and go to state 21
    MATCHER   shift, and go to state 22
    EXECUTOR  shift, and go to state 23


State 10

    2 start: header_del adds rebuilds .
   13 rebuilds: rebuilds . rebuild

    REBUILD  shift, and go to state 24

    $default  reduce using rule 2 (start)

    rebuild  go to state 25


State 11

   19 adds: adds add .

    $default  reduce using rule 19 (adds)


State 12

   29 header_def: HEADER IDENTIFIER . '{' field_defs '}'

    '{'  shift, and go to state 26


State 13

   37 struct_def: STRUCT . IDENTIFIER '{' field_defs '}' IDENTIFIER ';'
   38           | STRUCT . HEADERS '{' field_defs '}' IDENTIFIER ';'

    HEADERS     shift, and go to state 27
    IDENTIFIER  shift, and go to state 28


State 14

   40 parser_def: PARSER . IDENTIFIER '(' PACKET_IN PACKET ')' '{' state_defs '}'

    IDENTIFIER  shift, and go to state 29


State 15

   36 struct_defs: struct_defs struct_def .

    $default  reduce using rule 36 (struct_defs)


State 16

    1 start: header_defs struct_defs parser_def . actions_def tables_def pipeline pipeline
    3 header_del: header_defs struct_defs parser_def . dels

    ACTIONS  shift, and go to state 30

    $default  reduce using rule 4 (dels)

    dels         go to state 31
    actions_def  go to state 32


State 17

   24 add: ADD PARSER . IDENTIFIER IN STAGE IDENTIFIER

    IDENTIFIER  shift, and go to state 33


State 18

   22 add: ADD ACTION . action_def

    ACTION  shift, and go to state 34

    action_def  go to state 35


State 19

   21 add: ADD TABLE . table_def

    TABLE  shift, and go to state 36

    table_def  go to state 37


State 20

   23 add: ADD ENTRIES . IN TABLE IDENTIFIER IN STAGE IDENTIFIER table_optional_stmt

    IN  shift, and go to state 38


State 21

   20 add: ADD STAGE . stage_def

    STAGE  shift, and go to state 39

    stage_def  go to state 40


State 22

   25 add: ADD MATCHER . IN STAGE IDENTIFIER switch_entries

    IN  shift, and go to state 41


State 23

   26 add: ADD EXECUTOR . IN STAGE IDENTIFIER stage_executor_entries

    IN  shift, and go to state 42


State 24

   14 rebuild: REBUILD . DEFAULT_ACTION IDENTIFIER IN TABLE IDENTIFIER IN STAGE IDENTIFIER
   15        | REBUILD . EXPRESSION IN ACTION IDENTIFIER IN STAGE IDENTIFIER expressions
   16        | REBUILD . OPERATION IN STAGE IDENTIFIER operations
   17        | REBUILD . ACTION_TO_STAGE IDENTIFIER IN STAGE IDENTIFIER NEXT_STAGE IDENTIFIER

    DEFAULT_ACTION   shift, and go to state 43
    EXPRESSION       shift, and go to state 44
    OPERATION        shift, and go to state 45
    ACTION_TO_STAGE  shift, and go to state 46


State 25

   13 rebuilds: rebuilds rebuild .

    $default  reduce using rule 13 (rebuilds)


State 26

   29 header_def: HEADER IDENTIFIER '{' . field_defs '}'

    $default  reduce using rule 30 (field_defs)

    field_defs  go to state 47


State 27

   38 struct_def: STRUCT HEADERS . '{' field_defs '}' IDENTIFIER ';'

    '{'  shift, and go to state 48


State 28

   37 struct_def: STRUCT IDENTIFIER . '{' field_defs '}' IDENTIFIER ';'

    '{'  shift, and go to state 49


State 29

   40 parser_def: PARSER IDENTIFIER . '(' PACKET_IN PACKET ')' '{' state_defs '}'

    '('  shift, and go to state 50


State 30

   66 actions_def: ACTIONS . '{' action_defs '}'

    '{'  shift, and go to state 51


State 31

    3 header_del: header_defs struct_defs parser_def dels .
    5 dels: dels . del

    DEL  shift, and go to state 52

    $default  reduce using rule 3 (header_del)

    del  go to state 53


State 32

    1 start: header_defs struct_defs parser_def actions_def . tables_def pipeline pipeline

    TABLES  shift, and go to state 54

    tables_def  go to state 55


State 33

   24 add: ADD PARSER IDENTIFIER . IN STAGE IDENTIFIER

    IN  shift, and go to state 56


State 34

   69 action_def: ACTION . IDENTIFIER '(' parameters ')' '{' expressions '}'
   70           | ACTION . NOACTION '(' ')' '{' '}'

    NOACTION    shift, and go to state 57
    IDENTIFIER  shift, and go to state 58


State 35

   22 add: ADD ACTION action_def .

    $default  reduce using rule 22 (add)


State 36

  104 table_def: TABLE . IDENTIFIER '{' table_key_def table_optional_stmts '}'

    IDENTIFIER  shift, and go to state 59


State 37

   21 add: ADD TABLE table_def .

    $default  reduce using rule 21 (add)


State 38

   23 add: ADD ENTRIES IN . TABLE IDENTIFIER IN STAGE IDENTIFIER table_optional_stmt

    TABLE  shift, and go to state 60


State 39

  130 stage_def: STAGE . IDENTIFIER '{' stage_parser stage_matcher stage_executor '}'

    IDENTIFIER  shift, and go to state 61


State 40

   20 add: ADD STAGE stage_def .

    $default  reduce using rule 20 (add)


State 41

   25 add: ADD MATCHER IN . STAGE IDENTIFIER switch_entries

    STAGE  shift, and go to state 62


State 42

   26 add: ADD EXECUTOR IN . STAGE IDENTIFIER stage_executor_entries

    STAGE  shift, and go to state 63


State 43

   14 rebuild: REBUILD DEFAULT_ACTION . IDENTIFIER IN TABLE IDENTIFIER IN STAGE IDENTIFIER

    IDENTIFIER  shift, and go to state 64


State 44

   15 rebuild: REBUILD EXPRESSION . IN ACTION IDENTIFIER IN STAGE IDENTIFIER expressions

    IN  shift, and go to state 65


State 45

   16 rebuild: REBUILD OPERATION . IN STAGE IDENTIFIER operations

    IN  shift, and go to state 66


State 46

   17 rebuild: REBUILD ACTION_TO_STAGE . IDENTIFIER IN STAGE IDENTIFIER NEXT_STAGE IDENTIFIER

    IDENTIFIER  shift, and go to state 67


State 47

   29 header_def: HEADER IDENTIFIER '{' field_defs . '}'
   31 field_defs: field_defs . field_def ';'

    BIT         shift, and go to state 68
    IDENTIFIER  shift, and go to state 69
    '}'         shift, and go to state 70

    field_def  go to state 71
    type_def   go to state 72


State 48

   38 struct_def: STRUCT HEADERS '{' . field_defs '}' IDENTIFIER ';'

    $default  reduce using rule 30 (field_defs)

    field_defs  go to state 73


State 49

   37 struct_def: STRUCT IDENTIFIER '{' . field_defs '}' IDENTIFIER ';'

    $default  reduce using rule 30 (field_defs)

    field_defs  go to state 74


State 50

   40 parser_def: PARSER IDENTIFIER '(' . PACKET_IN PACKET ')' '{' state_defs '}'

    PACKET_IN  shift, and go to state 75


State 51

   66 actions_def: ACTIONS '{' . action_defs '}'

    $default  reduce using rule 67 (action_defs)

    action_defs  go to state 76


State 52

    6 del: DEL . STAGE IDENTIFIER
    7    | DEL . TABLE IDENTIFIER IN STAGE IDENTIFIER
    8    | DEL . ACTION IDENTIFIER IN STAGE IDENTIFIER
    9    | DEL . ENTRIES IN TABLE IDENTIFIER IN STAGE IDENTIFIER
   10    | DEL . PARSER IDENTIFIER IN STAGE IDENTIFIER
   11    | DEL . MATCHER IN STAGE IDENTIFIER key_def

    PARSER   shift, and go to state 77
    ACTION   shift, and go to state 78
    TABLE    shift, and go to state 79
    ENTRIES  shift, and go to state 80
    STAGE    shift, and go to state 81
    MATCHER  shift, and go to state 82


State 53

    5 dels: dels del .

    $default  reduce using rule 5 (dels)


State 54

  101 tables_def: TABLES . '{' table_defs '}'

    '{'  shift, and go to state 83


State 55

    1 start: header_defs struct_defs parser_def actions_def tables_def . pipeline pipeline

    CONTROL  shift, and go to state 84

    pipeline  go to state 85


State 56

   24 add: ADD PARSER IDENTIFIER IN . STAGE IDENTIFIER

    STAGE  shift, and go to state 86


State 57

   70 action_def: ACTION NOACTION . '(' ')' '{' '}'

    '('  shift, and go to state 87


State 58

   69 action_def: ACTION IDENTIFIER . '(' parameters ')' '{' expressions '}'

    '('  shift, and go to state 88


State 59

  104 table_def: TABLE IDENTIFIER . '{' table_key_def table_optional_stmts '}'

    '{'  shift, and go to state 89


State 60

   23 add: ADD ENTRIES IN TABLE . IDENTIFIER IN STAGE IDENTIFIER table_optional_stmt

    IDENTIFIER  shift, and go to state 90


State 61

  130 stage_def: STAGE IDENTIFIER . '{' stage_parser stage_matcher stage_executor '}'

    '{'  shift, and go to state 91


State 62

   25 add: ADD MATCHER IN STAGE . IDENTIFIER switch_entries

    IDENTIFIER  shift, and go to state 92


State 63

   26 add: ADD EXECUTOR IN STAGE . IDENTIFIER stage_executor_entries

    IDENTIFIER  shift, and go to state 93


State 64

   14 rebuild: REBUILD DEFAULT_ACTION IDENTIFIER . IN TABLE IDENTIFIER IN STAGE IDENTIFIER

    IN  shift, and go to state 94


State 65

   15 rebuild: REBUILD EXPRESSION IN . ACTION IDENTIFIER IN STAGE IDENTIFIER expressions

    ACTION  shift, and go to state 95


State 66

   16 rebuild: REBUILD OPERATION IN . STAGE IDENTIFIER operations

    STAGE  shift, and go to state 96


State 67

   17 rebuild: REBUILD ACTION_TO_STAGE IDENTIFIER . IN STAGE IDENTIFIER NEXT_STAGE IDENTIFIER

    IN  shift, and go to state 97


State 68

   33 type_def: BIT . '<' VALUE_INT '>'

    '<'  shift, and go to state 98


State 69

   34 type_def: IDENTIFIER .

    $default  reduce using rule 34 (type_def)


State 70

   29 header_def: HEADER IDENTIFIER '{' field_defs '}' .

    $default  reduce using rule 29 (header_def)


State 71

   31 field_defs: field_defs field_def . ';'

    ';'  shift, and go to state 99


State 72

   32 field_def: type_def . IDENTIFIER

    IDENTIFIER  shift, and go to state 100


State 73

   31 field_defs: field_defs . field_def ';'
   38 struct_def: STRUCT HEADERS '{' field_defs . '}' IDENTIFIER ';'

    BIT         shift, and go to state 68
    IDENTIFIER  shift, and go to state 69
    '}'         shift, and go to state 101

    field_def  go to state 71
    type_def   go to state 72


State 74

   31 field_defs: field_defs . field_def ';'
   37 struct_def: STRUCT IDENTIFIER '{' field_defs . '}' IDENTIFIER ';'

    BIT         shift, and go to state 68
    IDENTIFIER  shift, and go to state 69
    '}'         shift, and go to state 102

    field_def  go to state 71
    type_def   go to state 72


State 75

   40 parser_def: PARSER IDENTIFIER '(' PACKET_IN . PACKET ')' '{' state_defs '}'

    PACKET  shift, and go to state 103


State 76

   66 actions_def: ACTIONS '{' action_defs . '}'
   68 action_defs: action_defs . action_def

    ACTION  shift, and go to state 34
    '}'     shift, and go to state 104

    action_def  go to state 105


State 77

   10 del: DEL PARSER . IDENTIFIER IN STAGE IDENTIFIER

    IDENTIFIER  shift, and go to state 106


State 78

    8 del: DEL ACTION . IDENTIFIER IN STAGE IDENTIFIER

    IDENTIFIER  shift, and go to state 107


State 79

    7 del: DEL TABLE . IDENTIFIER IN STAGE IDENTIFIER

    IDENTIFIER  shift, and go to state 108


State 80

    9 del: DEL ENTRIES . IN TABLE IDENTIFIER IN STAGE IDENTIFIER

    IN  shift, and go to state 109


State 81

    6 del: DEL STAGE . IDENTIFIER

    IDENTIFIER  shift, and go to state 110


State 82

   11 del: DEL MATCHER . IN STAGE IDENTIFIER key_def

    IN  shift, and go to state 111


State 83

  101 tables_def: TABLES '{' . table_defs '}'

    $default  reduce using rule 102 (table_defs)

    table_defs  go to state 112


State 84

  127 pipeline: CONTROL . IDENTIFIER '{' stage_defs '}'

    IDENTIFIER  shift, and go to state 113


State 85

    1 start: header_defs struct_defs parser_def actions_def tables_def pipeline . pipeline

    CONTROL  shift, and go to state 84

    pipeline  go to state 114


State 86

   24 add: ADD PARSER IDENTIFIER IN STAGE . IDENTIFIER

    IDENTIFIER  shift, and go to state 115


State 87

   70 action_def: ACTION NOACTION '(' . ')' '{' '}'

    ')'  shift, and go to state 116


State 88

   69 action_def: ACTION IDENTIFIER '(' . parameters ')' '{' expressions '}'

    BIT         shift, and go to state 68
    IDENTIFIER  shift, and go to state 69

    $default  reduce using rule 71 (parameters)

    field_def   go to state 117
    type_def    go to state 72
    parameters  go to state 118


State 89

  104 table_def: TABLE IDENTIFIER '{' . table_key_def table_optional_stmts '}'

    KEY  shift, and go to state 119

    table_key_def  go to state 120


State 90

   23 add: ADD ENTRIES IN TABLE IDENTIFIER . IN STAGE IDENTIFIER table_optional_stmt

    IN  shift, and go to state 121


State 91

  130 stage_def: STAGE IDENTIFIER '{' . stage_parser stage_matcher stage_executor '}'

    PARSER  shift, and go to state 122

    stage_parser  go to state 123


State 92

   25 add: ADD MATCHER IN STAGE IDENTIFIER . switch_entries

    $default  reduce using rule 139 (switch_entries)

    switch_entries  go to state 124


State 93

   26 add: ADD EXECUTOR IN STAGE IDENTIFIER . stage_executor_entries

    $default  reduce using rule 148 (stage_executor_entries)

    stage_executor_entries  go to state 125


State 94

   14 rebuild: REBUILD DEFAULT_ACTION IDENTIFIER IN . TABLE IDENTIFIER IN STAGE IDENTIFIER

    TABLE  shift, and go to state 126


State 95

   15 rebuild: REBUILD EXPRESSION IN ACTION . IDENTIFIER IN STAGE IDENTIFIER expressions

    IDENTIFIER  shift, and go to state 127


State 96

   16 rebuild: REBUILD OPERATION IN STAGE . IDENTIFIER operations

    IDENTIFIER  shift, and go to state 128


State 97

   17 rebuild: REBUILD ACTION_TO_STAGE IDENTIFIER IN . STAGE IDENTIFIER NEXT_STAGE IDENTIFIER

    STAGE  shift, and go to state 129


State 98

   33 type_def: BIT '<' . VALUE_INT '>'

    VALUE_INT  shift, and go to state 130


State 99

   31 field_defs: field_defs field_def ';' .

    $default  reduce using rule 31 (field_defs)


State 100

   32 field_def: type_def IDENTIFIER .

    $default  reduce using rule 32 (field_def)


State 101

   38 struct_def: STRUCT HEADERS '{' field_defs '}' . IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 131


State 102

   37 struct_def: STRUCT IDENTIFIER '{' field_defs '}' . IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 132


State 103

   40 parser_def: PARSER IDENTIFIER '(' PACKET_IN PACKET . ')' '{' state_defs '}'

    ')'  shift, and go to state 133


State 104

   66 actions_def: ACTIONS '{' action_defs '}' .

    $default  reduce using rule 66 (actions_def)


State 105

   68 action_defs: action_defs action_def .

    $default  reduce using rule 68 (action_defs)


State 106

   10 del: DEL PARSER IDENTIFIER . IN STAGE IDENTIFIER

    IN  shift, and go to state 134


State 107

    8 del: DEL ACTION IDENTIFIER . IN STAGE IDENTIFIER

    IN  shift, and go to state 135


State 108

    7 del: DEL TABLE IDENTIFIER . IN STAGE IDENTIFIER

    IN  shift, and go to state 136


State 109

    9 del: DEL ENTRIES IN . TABLE IDENTIFIER IN STAGE IDENTIFIER

    TABLE  shift, and go to state 137


State 110

    6 del: DEL STAGE IDENTIFIER .

    $default  reduce using rule 6 (del)


State 111

   11 del: DEL MATCHER IN . STAGE IDENTIFIER key_def

    STAGE  shift, and go to state 138


State 112

  101 tables_def: TABLES '{' table_defs . '}'
  103 table_defs: table_defs . table_def

    TABLE  shift, and go to state 36
    '}'    shift, and go to state 139

    table_def  go to state 140


State 113

  127 pipeline: CONTROL IDENTIFIER . '{' stage_defs '}'

    '{'  shift, and go to state 141


State 114

    1 start: header_defs struct_defs parser_def actions_def tables_def pipeline pipeline .

    $default  reduce using rule 1 (start)


State 115

   24 add: ADD PARSER IDENTIFIER IN STAGE IDENTIFIER .

    $default  reduce using rule 24 (add)


State 116

   70 action_def: ACTION NOACTION '(' ')' . '{' '}'

    '{'  shift, and go to state 142


State 117

   72 parameters: field_def .

    $default  reduce using rule 72 (parameters)


State 118

   69 action_def: ACTION IDENTIFIER '(' parameters . ')' '{' expressions '}'
   73 parameters: parameters . ',' field_def

    ')'  shift, and go to state 143
    ','  shift, and go to state 144


State 119

  105 table_key_def: KEY . '=' '{' key_entries '}'

    '='  shift, and go to state 145


State 120

  104 table_def: TABLE IDENTIFIER '{' table_key_def . table_optional_stmts '}'

    $default  reduce using rule 112 (table_optional_stmts)

    table_optional_stmts  go to state 146


State 121

   23 add: ADD ENTRIES IN TABLE IDENTIFIER IN . STAGE IDENTIFIER table_optional_stmt

    STAGE  shift, and go to state 147


State 122

  131 stage_parser: PARSER . '{' stage_parser_headers '}' ';'

    '{'  shift, and go to state 148


State 123

  130 stage_def: STAGE IDENTIFIER '{' stage_parser . stage_matcher stage_executor '}'

    MATCHER  shift, and go to state 149

    stage_matcher  go to state 150


State 124

   25 add: ADD MATCHER IN STAGE IDENTIFIER switch_entries .
  140 switch_entries: switch_entries . switch_entry
